force-app/main/default/objects/custom_create100__c/custom_create100__c.object-meta.xml
<CustomObject>
    <label>Custom created object100</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects100</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>