force-app/main/default/objects/custom_create100__c/fields/custom_create_100field523__c.field-meta.xml
<CustomField>
    <fullName>custom_create_100field523__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 100field523</label>
    <type>Checkbox</type>
</CustomField>